@@ -158,10 +158,10 @@ namespace Gamera {
 
 
   template<class T>
-  typename ImageFactory<T>::view_type* outline(const T& in) {
+  typename ImageFactory<T>::view_type* outline(const T& in, int which=0) {
     //typedef typename ImageFactory<T>::data_type data_type;
     typedef typename ImageFactory<T>::view_type view_type;
-    view_type* out = erode_dilate(in, 1, 0, 0);
+    view_type* out = erode_dilate(in, 1, which, 0);
     xor_image(*out, in);
     return out;
   }
